nexus/nexus/nexus.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nexus
  namespace: nexus
  labels:
    app.kubernetes.io/name: nexus
spec:
  serviceName: nexus-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nexus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nexus
    spec:
      securityContext:
        runAsUser: 200
        runAsGroup: 2000
        fsGroup: 2000
      containers:
        - name: nexus
          image: sonatype/nexus3:3.85.0
          ports:
            - containerPort: 8081
              protocol: TCP
              name: http
            - containerPort: 8123
              protocol: TCP
              name: docker
          startupProbe:
            httpGet:
              path: /service/rest/v1/status
              port: 8081
            periodSeconds: 15
            failureThreshold: 20
          readinessProbe:
            httpGet:
              path: /service/rest/v1/status/writable
              port: 8081
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /service/rest/v1/status
              port: 8081
            periodSeconds: 10
            failureThreshold: 3
          resources:
            limits:
              cpu: 3000m
              memory: 10000Mi
            requests:
              cpu: 2000m
              memory: 8000Mi
          volumeMounts:
            - name: nexus-volume
              mountPath: "/nexus-data"
  volumeClaimTemplates:
    - metadata:
        name: nexus-volume
      spec:
        selector:
          matchLabels:
            app.kubernetes.io/name: nexus-volume
        storageClassName: native-storage
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 16Gi
