nexus/nexus/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-headless
  namespace: nexus
  labels:
    app.kubernetes.io/name: nexus-headless-service
spec:
  selector:
    app.kubernetes.io/name: nexus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
    - protocol: TCP
      port: 8123
      targetPort: docker
      name: docker
  type: ClusterIP
  clusterIP: None
